Fix vertical height/padding on mobile web

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,8 @@
 html.dark {
   background-color: rgb(15, 23, 42);
 }
+
+.h-screen {
+  height: 100vh; /* Fallback for browsers that do not support Custom Properties */
+  height: calc(var(--vh, 1vh) * 100);
+}
